@@ -1,8 +1,9 @@
 if @user.errors.empty?
   page.call "crm.flip_form", :change_password
   page.call "crm.set_title", :change_password, "My Profile"
-  page[:flash_notice].replace_html "Your password has been changed."
+  page[:flash_notice].replace_html flash[:notice]
   page.call "crm.flash", :flash_notice
+  flash[:notice] = nil
 else
   page[:change_password].replace_html :partial => "password"
   page[:change_password].visual_effect :shake, :duration => 0.25, :distance => 6
